refactor: use sealed interface for AuthorizationRejection
Replace record + enum pattern with sealed interface and inner records.
This approach encodes the rejection type directly in the type hierarchy.